deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-tunnel-ingress-controller
  namespace: cloudflare-tunnel-ingress-controller-dev
  labels:
    app: cloudflare-tunnel-ingress-controller
spec:
  clusterIP: None
  selector:
    app: cloudflare-tunnel-ingress-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflare-tunnel-ingress-controller
  namespace: cloudflare-tunnel-ingress-controller-dev
  labels:
    app: cloudflare-tunnel-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflare-tunnel-ingress-controller
  template:
    metadata:
      labels:
        app: cloudflare-tunnel-ingress-controller
    spec:
      volumes:
        - name: cloudflare-api-token
          secret:
            secretName: cloudflare-api
      containers:
        - name: cloudflare-tunnel-ingress-controller
          image: ghcr.io/strrl/cloudflare-tunnel-ingress-controller
          command:
            - cloudflare-tunnel-ingress-controller
            - -v=10
            - --ingress-class=cloudflare-tunnel
            - --controller-class=strrl.dev/cloudflare-tunnel-ingress-controller
            - --cloudflare-api-token=$(CLOUDFLARE_API_TOKEN)
            - --cloudflare-account-id=$(CLOUDFLARE_ACCOUNT_ID)
            - --cloudflare-tunnel-id=$(CLOUDFLARE_TUNNEL_ID)
            - --cloudflare-tunnel-name=$(CLOUDFLARE_TUNNEL_NAME)
      serviceAccountName: cloudflare-tunnel-ingress-controller
