ingress-class.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: cloudflare-tunnel
spec:
  controller: strrl.dev/cloudflare-tunnel-ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
      host: dashboard.strrl.cloud
